--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,9 @@ steps:
 - task: NuGetCommand@2
   displayName: 'Publish NuGet package'
   inputs:
-    command: push
-    feedPublish: '$(System.TeamProject)/Tailspin.SpaceGame.Web.Models'
+    command: 'push'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+    nuGetFeedType: 'internal'
+    publishVstsFeed: '396eb314-b172-4f8d-b985-5c9513cb1edb/b17e7419-4455-4049-8e6a-1738c09ec117'
     allowPackageConflicts: true
   condition: succeeded()
